--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.6",
     "vite-plugin-svgr": "^4.2.0",
     "zustand": "^4.5.4"
   },
