--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.6",
     "vite-plugin-svgr": "^4.2.0",
