--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,28 @@
 {
   "compilerOptions": {
-    "allowJs": true,
-    "allowSyntheticDefaultImports": true,
-    "baseUrl": "./src",
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "inlineSources": true,
-    "isolatedModules": true,
-    "jsx": "react-jsx",
-    "lib": ["es6", "dom"],
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    "moduleResolution": "node",
-    "noEmit": true,
-    "sourceMap": true,
-    "sourceRoot": "./src",
-    "strict": true,
-    "target": "esnext",
-    "typeRoots": ["./declarations", "./node_modules/@types/"],
     "skipLibCheck": true,
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "jsx": "react-jsx",
+    "baseUrl": "./src",
     "paths": {
       "@/*": ["./*"],
       "@styles/*": ["./src/styles/*"]
     },
-    "noImplicitThis": true
-  }
+    /* Linting */
+    "strict": true,
+    "strictNullChecks": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
+  },
+  "include": ["src"]
 }
