--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-qr-code": "^2.0.15",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.6",
+    "swiper": "^11.1.14",
     "vite-plugin-svgr": "^4.2.0",
     "zustand": "^4.5.4"
   },
