--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@tanstack/react-query-devtools": "^5.51.15",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.11.9",
     "immer": "^10.1.1",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
