--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.13",
     "framer-motion": "^11.11.9",
     "immer": "^10.1.1",
+    "plural-ru": "^2.0.2",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-cookie": "^7.2.0",
